--- a/event.html
+++ b/event.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <head>
@@ -85,23 +84,23 @@
 									</table>
 									<h5>Race Day</h5>
 									<ul class="alt">
-										<li>Bring your printed <a target= "_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target= "_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target= "_blank"  href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
+										<li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a>											waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
 									</ul>
 								</div>
 
 							</div>
 							<div class="6u$ 12u$(medium)">
 								<h5>Color 4 A Cure 5K</h5>
-								<ul class ="alt">
-									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
+								<ul class="alt">
+									<li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
 									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
 									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
 								</ul>
 
 								<h5>Pricing</h5>
 								<ul class="alt">
-									<li>10/16 - 10/26 Early Registration: $25 with t-shirt</li>
-									<li>10/27 - 11/10 Late Registration: $25 no t-shirt</li>
+									<li>10/16 - 10/27(@noon) Early Registration: $25 with t-shirt</li>
+									<li>10/27(@noon) - 11/10(@noon) Late Registration: $25 no t-shirt</li>
 									<li>11/11 Day of Registration: $30 no t-shirt</li>
 									<li><i>Children 3 and under: free</i></li>
 								</ul>
@@ -113,7 +112,8 @@
 					</section>
 
 					<!--FAQ-->
-				</br></br>
+					</br>
+					</br>
 					<header>
 						<h2><a name="faq" id="faq">Frequently Asked Questions</a></h2>
 
@@ -219,7 +219,7 @@
 								<div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven" data-parent="#accordion">
 									<div class="card-body">
 										Contact us at <b><a href="mailto:mailto:mhscolor4acure5k@gmail.com">mailto:mhscolor4acure5k@gmail.com</a><b> or <b>513.884.6175</b>
-										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -235,18 +235,18 @@
 
 
 		<!-- CTA -->
-			<section id="cta" class="wrapper style4">
-				<div class="inner">
-					<header>
-						<h2>Register now</h2>
-						<p>Register before 10.26 to receive a free t-shirt.</p>
-					</header>
-					<ul class="actions vertical">
-						<li><a href="register.html" class="button fit special">REGISTER</a></li>
+		<section id="cta" class="wrapper style4">
+			<div class="inner">
+				<header>
+					<h2>Register now</h2>
+					<p>Register before 10.26 to receive a free t-shirt.</p>
+				</header>
+				<ul class="actions vertical">
+					<li><a href="register.html" class="button fit special">REGISTER</a></li>
 
-					</ul>
-				</div>
-			</section>
+				</ul>
+			</div>
+		</section>
 
 
 		<!-- Footer -->
@@ -254,7 +254,7 @@
 			<ul class="icons">
 				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="mailto:mhscolor4acure5k@gmail.com"class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>Color 4 a cure 5k</li>
