--- a/index.html
+++ b/index.html
@@ -1,62 +1,63 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Home - MHS Color 4 a Cure 5K</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Home - MHS Color 4 a Cure 5K</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
-						<nav id="nav">
+<body class="landing">
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="event.html">Event Details</a></li>
-											<li><a href="event.html#faq">FAQ</a></li>
-											<!-- <li><a href="#">About Us</a></li> -->
-											<li><a href="sponsors.html">Our Sponsors</a></li>
-											<li><a href="contact.html">Contact Us</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="event.html">Event Details</a></li>
+								<li><a href="event.html#faq">FAQ</a></li>
+								<!-- <li><a href="#">About Us</a></li> -->
+								<li><a href="sponsors.html">Our Sponsors</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 
-											<li><a href="register.html"></br>Register</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Mason Color 4 a Cure 5K</h2>
-							<p>Benefiting the Lukemia Lymphoma Society<br />
-							Through Mason High School National Honor Society</p>
-							<ul class="actions">
-								<!-- <li><a href="#" class="button">Register</a></li> -->
+								<li><a href="register.html"></br>Register</a></li>
 							</ul>
 						</div>
-						<a href="event.html" class="more scrolly">Learn More</a>
-					</section>
+					</li>
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner">
+				<h2>Mason Color 4 a Cure 5K</h2>
+				<p>Benefiting the Lukemia Lymphoma Society<br /> Through Mason High School National Honor Society</p>
+				<ul class="actions">
+					<!-- <li><a href="#" class="button">Register</a></li> -->
+				</ul>
+			</div>
+			<a href="event.html" class="more scrolly">Learn More</a>
+		</section>
 
 
 
 
-				<!-- One -->
-				<!-- <section id="one" class="wrapper style1 special">
+		<!-- One -->
+		<!-- <section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Arcu aliquet vel lobortis ata nisl<br />
@@ -72,8 +73,8 @@
 						</div>
 					</section> -->
 
-				<!-- Three -->
-					<!-- <section id="three" class="wrapper style3 special">
+		<!-- Three -->
+		<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -93,8 +94,8 @@
 						</div>
 					</section> -->
 
-				<!-- CTA -->
-					<!-- <section id="cta" class="wrapper style4">
+		<!-- CTA -->
+		<!-- <section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Register now</h2>
@@ -107,32 +108,34 @@
 						</div>
 					</section> -->
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
-						</ul>
-					</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>Color 4 a cure 5k</li>
+				<li>Mason High School National Honor Society</li>
+			</ul>
+		</footer>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-		 <script src="assets/js/video.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/video.js"></script>
 
 
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-						<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
