--- a/newindex.html
+++ b/newindex.html
@@ -1,150 +1,166 @@
 <!DOCTYPE HTML>
 <!-- http://www.lightthenight.org/ -->
 <html>
-	<head>
-		<title>Home - MHS Color 4 a Cure 5K</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Home - MHS Color 4 a Cure 5K</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
-						<nav id="nav">
+<body class="landing">
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="event.html">Event Details</a></li>
-											<li><a href="event.html#faq">FAQ</a></li>
-											<!-- <li><a href="#">About Us</a></li> -->
-											<li><a href="sponsors.html">Our Sponsors</a></li>
-											<li><a href="contact.html">Contact Us</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="event.html">Event Details</a></li>
+								<li><a href="event.html#faq">FAQ</a></li>
+								<!-- <li><a href="#">About Us</a></li> -->
+								<li><a href="sponsors.html">Our Sponsors</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 
-											<li><a href="register.html"></br>Register</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Mason Color 4 a Cure 5K</h2>
-							<p>Benefiting the Lukemia Lymphoma Society<br />
-							Through Mason High School National Honor Society</p>
-							<ul class="actions">
-								<!-- <li><a href="#" class="button">Register</a></li> -->
+								<li><a href="register.html"></br>Register</a></li>
 							</ul>
 						</div>
-						<a href="event.html" class="more scrolly">Learn More</a>
-					</section>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-					<!-- One -->
-						<section id="one" class="wrapper style1 special">
-							<div class="inner">
-								<header class="major">
-									<h2>Arcu aliquet vel lobortis ata nisl<br />
-									eget augue amet aliquet nisl cep donec</h2>
-									<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-								</header>
-								<ul class="icons major">
-									<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-									<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-									<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-								</ul>
-							</div>
-						</section>
-
-					<!-- Two -->
-						<section id="two" class="wrapper alt style2 OR"  >
-							<section class="spotlight" class= "spot">
-								<div class="spot sp1">
-									<a href="register.html"><h2>Run</h2>
-									<p>Some body text hello hello </p></a>
-								</div>
-								<div class="spot sp2">
-									<a href="sponsors.html"><h2>Sponsor</h2>
-									<p>ALl </p></a>
-								</div>
-								<div class="spot sp3">
-									<a href="http://events.lls.org/pages/soh/WilliamMasonHighSchool-2018"><h2>Donate</h2>
-									<p>Can't run but still want to help? </p></a>
-							</div>
-							</section>
-						</section>
-
-					<!-- Three -->
-						<section id="three" class="wrapper style3 special OR">
-							<div class="inner">
-								<header class="major OR">
-									<h2>The Impact you help us make</h2>
-									</header>
-							</div>
-						</section>
-
-						<section id="two" class="wrapper alt style2">
-							<section class="spotlight">
-								<div class="image"><img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /></div><div class="content">
-									<h2>Fund approximately
-									</br></br><span class="ynum">300</span></br>
-									active Lukemia & Lymphoma Society Research projects.</h2>
-								</div>
-							</section>
-							<section class="spotlight">
-								<div class="image"><img src="images/patients.jpg" alt="" /></div><div class="content">
-									<h2>Help more than
-									</br></br><span class="ynum">55,000</span></br>
-									patients afford treatment.</h2>
-								</div>
-							</section>
-							<section class="spotlight">
-								<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-									<h2>Invest More than
-									</br></br><span class="ynum">$1 B. +</span></br>
-									in cancer research.</h2>
-								</div>
-							</section>
-						</section>
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
-						</ul>
-					</footer>
-
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner">
+				<h2>Mason Color 4 a Cure 5K</h2>
+				<p>Benefiting the Lukemia Lymphoma Society<br /> Through Mason High School National Honor Society</p>
+				<ul class="actions">
+					<!-- <li><a href="#" class="button">Register</a></li> -->
+				</ul>
 			</div>
+			<a href="event.html" class="more scrolly">Learn More</a>
+		</section>
 
-		<!-- Scripts -->
-		 <script src="assets/js/video.js"></script>
+		<!-- One -->
+		<section id="one" class="wrapper style1 special">
+			<div class="inner">
+				<header class="major">
+					<h2>Arcu aliquet vel lobortis ata nisl<br /> eget augue amet aliquet nisl cep donec</h2>
+					<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+				</header>
+				<ul class="icons major">
+					<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span>
+					</li>
+					<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span>
+					</li>
+					<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- Two -->
+		<section id="two" class="wrapper alt style2 OR">
+			<section class="spotlight" class="spot">
+				<div class="spot sp1">
+					<a href="register.html">
+						<h2>Run</h2>
+						<p>Some body text hello hello </p>
+					</a>
+				</div>
+				<div class="spot sp2">
+					<a href="sponsors.html">
+						<h2>Sponsor</h2>
+						<p>ALl </p>
+					</a>
+				</div>
+				<div class="spot sp3">
+					<a href="http://events.lls.org/pages/soh/WilliamMasonHighSchool-2018">
+						<h2>Donate</h2>
+						<p>Can't run but still want to help? </p>
+					</a>
+				</div>
+			</section>
+		</section>
+
+		<!-- Three -->
+		<section id="three" class="wrapper style3 special OR">
+			<div class="inner">
+				<header class="major OR">
+					<h2>The Impact you help us make</h2>
+				</header>
+			</div>
+		</section>
+
+		<section id="two" class="wrapper alt style2">
+			<section class="spotlight">
+				<div class="image"><img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /></div>
+				<div class="content">
+					<h2>Fund approximately
+						</br>
+						</br><span class="ynum">300</span></br>
+						active Lukemia & Lymphoma Society Research projects.</h2>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/patients.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Help more than
+						</br>
+						</br><span class="ynum">55,000</span></br>
+						patients afford treatment.</h2>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Invest More than
+						</br>
+						</br><span class="ynum">$1 B. +</span></br>
+						in cancer research.</h2>
+				</div>
+			</section>
+		</section>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>Color 4 a cure 5k</li>
+				<li>Mason High School National Honor Society</li>
+			</ul>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/video.js"></script>
 
 
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-						<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
